# AutoExec

./: .gitignore  README.md  pyproject.toml  requirements.txt
autoexec/: __main__.py  agent.py  cli.py  core.py  diff.py  llm.py  memory.py  tester.py
autoexec/backends/: daytona.py  local.py
autoexec/examples/: test_agent.py
autoexec/tools/: list_models.py
ui/: index.html
